add background image

--- a/index.html
+++ b/index.html
@@ -19,5 +19,18 @@
             <a href="#">Contact</a>
         </nav>
     </header>
+    <section class="home">
+        <div class="home-content">
+            <h3>Hello, It's Me</h3>
+            <h1>Sara Mullaji</h1>
+            <h3>And I'm a</h3>
+            <p>I'm a passionate web developer with extensive experience for 1 year.
+                <br>I'm proficient in a range of technologies,including HTML,
+                <br>CSS,JavaScript,and many more...
+            </p>
+        <div class="home-sci">
+            
+        </div>        
+        </div>
 </body>
 </html>
