--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>portfolio</title>
     <link rel ="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
 </head>
 <body>
     <header class="header">
@@ -26,11 +28,15 @@
             <h3>And I'm a</h3>
             <p>I'm a passionate web developer with extensive experience for 1 year.
                 <br>I'm proficient in a range of technologies,including HTML,
-                <br>CSS,JavaScript,and many more...
-            </p>
+                <br>CSS,JavaScript,and many more...</p>
         <div class="home-sci">
-            
-        </div>        
+            <a href="#"><i class='bx bxl-instagram'></i></a>
+            <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+            <a href="#"><i class='bx bxl-youtube' ></i></a>
+            <a href="#"><i class='bx bxs-envelope' ></i></a>
+        </div>   
+        <a href="#" class="btn-box">More About Me</a>     
         </div>
+    </section>    
 </body>
 </html>
